--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
-    "react-toastify": "^8.0.3"
+    "react-toastify": "^8.0.3",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "scripts": {
     "start": "craco start",
