--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-linkify": "^1.0.0-alpha",
     "react-scripts": "^4.0.3",
     "react-toastify": "^8.0.3",
     "tailwind-scrollbar-hide": "^1.0.3"
@@ -41,6 +42,6 @@
   "devDependencies": {
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "^3.1.4"
   }
 }
