--- a/.gitignore
+++ b/.gitignore
@@ -7,21 +7,31 @@
 
 # testing
 /coverage
-.vscode
+
+# next.js
+/.next/
+/out/
+
 # production
 /build
 
-
-test.md
-# Notes
-notes.txt
 # misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Markdown
+test.md
+
+# local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# vercel
+.vercel
